Switch to self-hosted Whisper transcription + AWS deployment
- Replace Deepgram with Faster-Whisper for local transcription
- All audio stays on your server, only text goes to Claude
- Add Dockerfile and docker-compose for easy deployment
- Add AWS EC2 deployment script and guide
- Update requirements and configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,16 @@
-DEEPGRAM_API_KEY=your_deepgram_key
+# JARVIS Configuration
+
+# Your Anthropic API key (required for AI analysis)
 ANTHROPIC_API_KEY=your_anthropic_key
-OBSIDIAN_VAULT_PATH=/path/to/your/obsidian/vault
+
+# Password to protect the app (recommended)
+APP_PASSWORD=your_secure_password
+
+# Whisper model size: tiny, base, small, medium, large-v3
+# - tiny/base: Fast, lower accuracy (good for CPU)
+# - small/medium: Balanced (needs decent CPU or GPU)
+# - large-v3: Best accuracy (needs GPU)
+WHISPER_MODEL=base
+
+# Optional: Path to your Obsidian vault for context
+OBSIDIAN_VAULT_PATH=
