--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 fastapi>=0.109.0
 uvicorn>=0.27.0
 websockets>=12.0
-deepgram-sdk>=3.0.0
 anthropic>=0.34.0
 httpx>=0.26.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
+faster-whisper>=1.0.0
+numpy>=1.24.0
